--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,3 @@
-export ARDUINO_PATH="/usr/share/arduino"
-export ARDUINO_TOOLS_PATH="$HOME/Arduino/hardware/keyboardio"
+source_up
+
+export KALEIDOSCOPE_DIR="$(pwd)/../libraries/Kaleidoscope"
